--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
                     <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Third Author</a>
                   </span> -->
               <span class="author-block">
-                      Yichi Zhang<sup>1*</sup>,
+                      Yici Yan<sup>1*</sup>,
                   </span>
                   <span class="author-block">
-                      Yici Yan<sup>1*</sup>,
+                      Yichi Zhang<sup>1*</sup>,
                   </span>
                   <span class="author-block">
                       Xiangming Meng<sup>2</sup>,
@@ -87,7 +87,7 @@
                   <div class="is-size-5 publication-authors">
                     <span class="author-block"><sup>1</sup>University of Illinois Urbana-Champaign
                     <br><sup>2</sup>Zhejiang University<br>ICLR 2025</span>
-                    <span class="eql-cntrb"><small><br><sup>*</sup>Equal Contribution</small></span>
+                    <span class="eql-cntrb"><small><br><sup>*</sup>Equal Contribution in Alphabetical Order</small></span>
                   </div>
 
                   <div class="column has-text-centered">
