--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
                   <div class="is-size-5 publication-authors">
                     <span class="author-block"><sup>1</sup>University of Illinois Urbana-Champaign
-                    <br><sup>2</sup>Zhejiang University<br>ICLR 2025</span>
+                    <br><sup>2</sup>ZJU-UIUC Institute, Zhejiang University<br>ICLR 2025</span>
                     <span class="eql-cntrb"><small><br><sup>*</sup>Equal Contribution in Alphabetical Order</small></span>
                   </div>
 
