--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
       <div><p>$y_t$</p></div>
       <div><p>$x_t$</p></div>
     </div>
-    <h2 class="subtitle has-text-centered">4x High Noise Super Resolution</h2>
+    <h2 class="subtitle has-text-centered">4x Super Resolution with <br> High Measurement Noise</h2>
   </div>
 
   <div class="column">
